allow drag into empty list, fix scroll jump

--- a/cms/static/sass/_base.scss
+++ b/cms/static/sass/_base.scss
@@ -4,6 +4,7 @@
 // basic setup
 html {
   font-size: 62.5%;
+  height: 102%; // force scrollbar to prevent jump when scroll appears, cannot use overflow because it breaks drag
 }
 
 body {
