--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -73,20 +73,6 @@ div.course-wrapper {
         padding-bottom: 0;
         border-bottom: none;
       }
-    }
-
-    .vert-mod {
-      padding: 0;
-      margin: 0;
-      line-height: 1.4;
-      list-style: none;
-
-      .vertical-container,
-      .vertical-element {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-      }
 
       > div {
         @extend .clearfix;
